--- a/VmdkLoader/VmdkLoader.csproj
+++ b/VmdkLoader/VmdkLoader.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{19A73FE9-1A09-48A0-83C2-6B9AD1D37EE5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>VmdkLoader</RootNamespace>
     <AssemblyName>VmdkLoader</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
